fixed z-indexing of logo etc

--- a/src/Logo.scss
+++ b/src/Logo.scss
@@ -1,16 +1,16 @@
-.navi-hero {
-  // z-index: 90;
+.navi-hero .navi-logo {
+  z-index: 100;
 }
 
 #navi-root {
   .navi-logo {
     display: block;
-  }
-  .navi-logo img {
-    cursor: pointer;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 6px;
+    img {
+      cursor: pointer;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 6px;
+    }
   }
 }
